# chaocrdantic

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  ideal_ExampleDocument.md  pyproject.toml
chandra_ocr_pydantic/: __init__.py  __main__.py  agent.py  api.py  cli.py  config.py  image_utils.py  models.py  prompts.py
chaocrdantic/: __init__.py  __main__.py  agent.py  api.py  cli.py  config.py  document_renderer.py  image_utils.py  models.py  output.py  prompts.py  util.py
tests/: test_agent.py  test_output.py
tests/integration/: test_image_inference.py
