[project]
name = "chandra-ocr-pydantic"
version = "0.1.0"
description = "Pydantic-AI based OCR library for multi-page PDF processing."
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["ocr", "pdf", "markdown", "layout", "pydantic-ai"]
dependencies = [
    "click>=8.0.0",
    "filetype>=1.2.0",
    "pillow>=10.2.0",
    "pydantic>=2.12.0",
    "pydantic-ai>=0.0.20",
    "pydantic-settings>=2.11.0",
    "pypdfium2>=4.30.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
chandra_ocr_pydantic = "chandra_ocr_pydantic.cli:main"

[tool.setuptools.packages.find]
include = ["chandra_ocr_pydantic*"]
